# own-resume

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: python-app.yml  react-app.yml
backend/: .flake8  Dockerfile  README.md  app.py  create_tables.py  database.py  main.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_data.db
backend/basics/: crud.py  model.py  schema.py
backend/models/: __init__.py  basics.py  crud.py  schemas.py  work.py
backend/resources/: __init__.py  hello.py  resume.py
backend/resume/: crud.py  schema.py
backend/tests/: base.py  test_main.py
backend/tests/basics/: test_crud.py
backend/tests/fixtures/: create_tables.py  populate_tables.py  test_data.db  test_db.py  test_resume.py
backend/tests/models/: base.py  test_basics.py  test_work.py
backend/tests/resources/: base.py  test_hello.py  test_resume.py
backend/tests/resume/: test_crud.py
backend/tests/work/: test_crud.py
backend/work/: crud.py  schema.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  setupProxy.js
frontend/src/auth/: AuthService.ts
frontend/src/login/: LoginContainer.tsx
frontend/src/resume/: Basics.tsx  Resume.css  Resume.test.tsx  Resume.tsx  ResumeContainer.tsx  ResumeModel.ts  Workplaces.tsx
frontend/src/resume/__snapshots__/: Resume.test.tsx.snap
